--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "typecheck": "tsc --noEmit",
     "test": "vitest run",
     "prepublishOnly": "npm run clean && npm run build",
-    "release": "npm version patch && npm publish && git push --follow-tags"
+    "release": "npm version patch && git push --follow-tags"
   },
   "peerDependencies": {
     "convex": "^1.31.6"
