--- a/package.json
+++ b/package.json
@@ -58,5 +58,8 @@
     "convex-test": "^0.0.41",
     "typescript": "^5",
     "vitest": "^4.0.18"
+  },
+  "dependencies": {
+    "@convex-dev/migrations": "^0.3.1"
   }
 }
